--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,13 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
 		<title>Spares Shop</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+
+		<script src="bootstrap/bootstrap.min.js"></script>
 	</body>
 </html>
